@@ -169,7 +169,7 @@ function install_test_remote_database_connection() {
 	if (!isset($rdatabase_ssl_verify_server_cert)) {
 		$rdatabase_ssl_verify_server_cert = false;
 	}
-        
+
 	$connection = db_connect_real(
 		$rdatabase_hostname,
 		$rdatabase_username,
@@ -183,7 +183,7 @@ function install_test_remote_database_connection() {
 		$rdatabase_ssl_cert,
 		$rdatabase_ssl_ca,
 		$rdatabase_ssl_capath,
-		$rdatabase_ssl_verify_server_path                
+		$rdatabase_ssl_verify_server_path
 	);
 
 	if (is_object($connection)) {
@@ -651,8 +651,8 @@ function install_setup_get_templates() {
 			// Loading Template Information from package
 			$myinfo             = @json_decode(shell_exec(cacti_escapeshellcmd(read_config_option('path_php_binary')) . ' -q ' . cacti_escapeshellarg(CACTI_PATH_CLI . '/import_package.php') . ' --filename=' . cacti_escapeshellarg("/$path/$xmlfile") . ' --info-only'), true);
 			$myinfo['filename'] = $xmlfile;
-			$info[]             = $myinfo;
-			$info[]             = array('filename' => $xmlfile, 'name' => $xmlfile);
+			$myinfo['name']     = $xmlfile;
+			$info[] = $myinfo;
 		}
 	}
 
